fix extra space of page

--- a/css/global.css
+++ b/css/global.css
@@ -12,6 +12,7 @@
 
 body{
     width: 100%;
+    margin:0;
 }
 
 /* center the content filling up whole width*/
