--- a/css/largepage.css
+++ b/css/largepage.css
@@ -146,7 +146,7 @@ p{
 
 #footer{
     background-color: var(--darkgrey);
-    width: 100%;
+    width: 100vw;
     justify-content: space-evenly;
     align-items: flex-start;
 }
